# ippool

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE.md  README.md  article.md
hooks/: README.md  install.sh  pre-commit
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  service.yaml
src/: handlers.rs  ippool.rs  main.rs
