[package]
name = "ippool"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.53", features = ["derive"] }
